[~] Обновлен метод /getListConfirmReg. Теперь по каждому подтверждению регистрации выводится id классного руководителя std_emp_id. Это необходимо на тот случай, если родитель не указал ФИО классного руководителя, так как у ученика его еще нет, поэтому автопроверка не смогла его найти. В этом случае данный параметр будет равен null, а в результатах автопроверки cr_teacher_fullname будет иметь статус OK. [+] Добавлен метод /confirmParentReg, позволяющий подтверждать или отклонять регистрацию родителя. В случае подтверждения, необходимо также передать массив ID учеников, которые являются детьми данного родителя.
